[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlelf"
version = "0.0.1"
authors = [{ name = "Farid Zakaria", email = "farid.m.zakaria@gmail.com" }]
readme = "README.md"
description = "Explore ELF objects through the power of SQL"
license = { file = "LICENSE" }
requires-python = ">=3.10,<4.0"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "capstone >= 5.0.1",
    "lief >=0.13.2",
    "apsw >= 3.43.1.0",
    "sh >= 2.0.6",
]

[project.urls]
Documentation = "https://github.com/fzakaria/sqlelf#readme"
Issues = "https://github.com/fzakaria/sqlelf/issues"
Source = "https://github.com/fzakaria/sqlelf"

[project.optional-dependencies]
dev = [
    "black >= 23.7.0",
    "isort >= 5.12.0",
    "flake8 >= 6.1.0",
    "pyright >= 1.1.325",
    "pytest >= 7.4.0",
    "mypy >= 1.0.0",
]

[tool.setuptools]
packages = ["sqlelf"]

[project.scripts]
sqlelf = "sqlelf.cli:start"

[tool.isort]
skip = [".git", "result"]
profile = "black"

[tool.pytest.ini_options]
addopts = ""

[tool.pyright]
include = ["sqlelf", "tests"]
exclude = ["**/__pycache__"]

reportMissingImports = true
reportMissingTypeStubs = true
useLibraryCodeForTypes = true

pythonVersion = "3.10"
pythonPlatform = "Linux"
