[tool.poetry]
name = "sqlelf"
version = "0.4"
description = "Explore ELF objects through the power of SQL"
license = "MIT"
authors = ["Farid Zakaria <farid.m.zakaria@gmail.com>"]

keywords = ["binary", "elf", "sql"]
packages = [{ include = "sqlelf" }]
readme = "README.md"
homepage = "https://github.com/fzakaria/sqlelf#readme"
repository = "https://github.com/fzakaria/sqlelf"
documentation = "https://github.com/fzakaria/sqlelf#readme"

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.urls]
Issues = "https://github.com/fzakaria/sqlelf/issues"
Source = "https://github.com/fzakaria/sqlelf"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
apsw = "^3.43.1.0"
capstone = "^5.0.1"
lief = "^0.14.1"
sh = "^2.0.6"

[tool.poetry.group.benchmarks.dependencies]
pandas = "^2.2.2"
plotnine = "^0.13.6"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
debugpy = "^1.8.2"
flake8 = "^6.1.0"
flake8-print = "^5.0.0"
isort = "^5.12.0"
# mypy and pyright fail to install if declared here, but they can be installed
# if they are declared in flake.nix
# mypy = "^1.9.0"
# pyright = "^1.1.369"

[tool.poetry.group.test.dependencies]
coverage = { version = "7.3", extras = ["toml"] }
pytest = "^7.4.0"

[tool.coverage.run]
omit = ["sqlelf/_version.py", "sqlelf/**/__init__.py", "tests/**/__init__.py"]
branch = true

[tool.black]
extend-exclude = "sqlelf/_vendor/"

[tool.isort]
skip = [".git", "result"]
skip_glob = ["sqlelf/_vendor/*"]
profile = "black"

[tool.poetry.scripts]
benchmark-symbol-size = "benchmarks.symbol_size_benchmark:main"
# examples:
# poetry run sqlelf examples/object-relocations/exe --sql "SELECT * FROM elf_instructions LIMIT 5;"
sqlelf = "sqlelf.cli:start"
sqlelf-merge = "sqlelf.tools.merge:start"

[tool.pyright]
exclude = ["**/__pycache__", "sqlelf/_version.py", "sqlelf/_vendor"]

[tool.pytest.ini_options]
addopts = "-m 'not slow' --strict-markers"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
